--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,8 +38,8 @@ body {
   margin: 20px auto auto auto;
   padding-top: 4px;
   position: relative;
-  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8);
-          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8), -3px -3px 4px rgba(250, 250, 250, 0.3);
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.8), -3px -3px 4px rgba(250, 250, 250, 0.3);
   border-radius: 10px;
   border: 3px solid rgba(0, 0, 0, 0.9);
 }
