--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -40,7 +40,9 @@ body
     margin: 20px auto auto auto;
     padding-top: 4px;
     position: relative;
-    box-shadow: 5px 5px 5px rgba(0,0,0,0.8);
+    box-shadow:
+        5px 5px 5px rgba(0,0,0,0.8),
+        -3px -3px 4px rgba(250,250,250,0.3);
     border-radius: 10px;
     border: 3px solid rgba(0,0,0,0.9);
 
@@ -167,7 +169,6 @@ body
     background-color: rgb(40,40,50);
     height: 480px;
     width: 270px;
-    // border-radius: 2px;
     border: 1px solid rgb(80,80,80);
     border-top: none;
 
@@ -176,7 +177,6 @@ body
         width: 100%;
         height: 20px;
         background-color: rgb(200,200,200);
-        // border-radius: 1px 1px 0 0;
         border-top: 1px solid rgb(60,60,60);
         
         ul
